@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
  -designation
}

class SNSUser {
    -name
    -sex
    -phoneNumber
    -email
    -birthDate
    -SNSNumber
    -citizenCardNumber
}

class Address {
    -country
    -city
    -county
    -parish
    -street
    -portNumber
    -postalCode
    -floor
    -observation
}

class ScheduleVaccine {
    -date
    -time
}

class CommunityMassVaccinationCenter {
    -name
    -phoneNumber
    -email
    -faxNumber
    -website
    -slotDuration
    -slotVaccineLimit
}

class VaccineType {
    -code
    -description
    -technology
}

Company "1" -- "*" SNSUser : owns >
Employee "*" -- "1" Company : knows <
Address "1" -- "1" SNSUser : has <
Receptionist --|> Employee
ScheduleVaccine "*" -- "1" Receptionist : requested by >
SNSUser "1" -- "1" Receptionist : asks to schedule a vaccine >
CommunityMassVaccinationCenter "*" -- "*" ScheduleVaccine : has >
ScheduleVaccine "*" -- "1" VaccineType : for taking >

@enduml